--- a/Nlayer.Api/Nlayer.Api.csproj
+++ b/Nlayer.Api/Nlayer.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
@@ -17,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nlayer.Service\Nlayer.Service.csproj" />
+    <ProjectReference Include="..\Nlayer.Caching\Nlayer.Caching.csproj" />
   </ItemGroup>
 
 </Project>
