--- a/Nlayer.Caching/Nlayer.Caching.csproj
+++ b/Nlayer.Caching/Nlayer.Caching.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Nlayer.Service\Nlayer.Service.csproj" />
+  </ItemGroup>
+
 </Project>
