Save ve Update Metotları yapıldı

--- a/Nlayer.Web/appsettings.json
+++ b/Nlayer.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NLayerApp;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
