--- a/Nlayer.Web/Nlayer.Web.csproj
+++ b/Nlayer.Web/Nlayer.Web.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Nlayer.Service\Nlayer.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
