--- a/Nlayer.Web/appsettings.json
+++ b/Nlayer.Web/appsettings.json
@@ -3,6 +3,7 @@
   "ConnectionStrings": {
     "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NLayerApp;Integrated Security=True;"
   },
+  "BaseUrl": "https://localhost:7263/api/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
